--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+This is the mirror of origin repository that was moved to https://gitflic.ru/project/omobus/omobus-proxy-db.
+
+--
+
 omobus-proxy-db: OMOBUS proxy storage
